--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:background="#00BFFF"
-        android:icon="@mipmap/app_logo_small"
+        android:icon="@mipmap/laucher_nightly"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
