--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,8 @@
         <activity
             android:name=".TaobaoMoveActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".FragmentManagerNote" />
+        <activity android:name=".FragmentNoteHeadline"></activity>
     </application>
 
 </manifest>
